--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-/* ===== LANDING PAGE ===== */
+/* #region ===== LANDING PAGE ===== */
 
 #brandPresentation {
     text-align: center;
@@ -16,7 +16,6 @@
 
 #brandPresentation p {
     font-size: 1.5rem;
-    color: var(--text-muted);
     margin: 1rem auto 0;
     max-width: 600px;
 }
@@ -129,6 +128,80 @@
     #brandPresentation h1 {
         font-size: 4rem; 
     }
+}
+
+/* #endregion */
+
+
+
+/* #region ===== DOCUMENTATION PAGES ===== */
+
+#contentTable {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 1rem 2rem 2rem 1.5rem;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background: var(--bg-panel);
+    height: 100vh;
+    border-right: 2px solid var(--border-color);
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+
+#contentTable h1 {
+    color: var(--primary-color);
+    font-size: 2.3rem;
+    margin: 0;
+    padding: 0;
+}
+
+.contentTableCategory {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin: 0 0 5px 0;
+}
+
+#contentTable a:first-child {
+    color: var(--primary-color);
+    font-size: 1.7rem;
+    font-weight: bold;
+}
+
+#contentTable a {
+    color: var(--text-main);
+    text-decoration: none;
+    font-size: 1.3rem;
+    margin: 0;
+    transition: all 0.2s ease;
+}
+
+#contentTable a:hover {
+    color: var(--primary-color);
+    transform: translate(4px);
+}
+
+
+.doc-section h1 {
+    color: var(--primary-color);
+    font-size: 4rem;
+    text-decoration: underline;
+    margin: 0;
+}
+
+.doc-section h2 {
+    color: white;
+    font-size: 2rem;
+    margin: 2rem 0 5px 0;
+}
+
+.doc-section p {
+    font-size: 1.3rem;
+    margin: 0;
 }
 
 /* #endregion */
