--- a/styles/defaults.css
+++ b/styles/defaults.css
@@ -67,7 +67,7 @@ body {
 /* vignette */
 .stripedBg::before {
     content: "";
-    position: absolute;
+    position: fixed;
     top: 0; left: 0; width: 100%; height: 100%;
     background: radial-gradient(circle at center, transparent 0%, #000 100%);
     pointer-events: none;
