--- a/styles/defaults.css
+++ b/styles/defaults.css
@@ -41,6 +41,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    -webkit-tap-highlight-color: transparent;
 }
 
 /* #endregion */
@@ -52,11 +53,11 @@ body {
     background-color: var(--bg-void);
     background-image: linear-gradient(
         -45deg, 
-        rgba(255,255,255,0.03) 25%, 
+        rgba(255,255,255,0.02) 25%, 
         transparent 25%, 
         transparent 50%, 
-        rgba(255,255,255,0.03) 50%, 
-        rgba(255,255,255,0.03) 75%, 
+        rgba(255,255,255,0.02) 50%, 
+        rgba(255,255,255,0.02) 75%, 
         transparent 75%, 
         transparent
     );
