--- a/styles/styles.css
+++ b/styles/styles.css
@@ -219,8 +219,17 @@
     margin: 2rem 0 10px 0;
 }
 
+.doc-section h3 {
+    color: #f3f3f3;
+    font-size: 1.65rem;
+    margin: 2.5rem 0 10px 0;
+    font-weight: normal;
+    font-style: italic;
+    text-decoration: underline;
+}
+
 .doc-section p {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     margin: 0;
 }
 
@@ -317,7 +326,7 @@
     background: var(--bg-panel);
     border: 1px solid var(--border-color);
     border-radius: 8px;
-    margin: 2rem 0 5rem;
+    margin: 1.2rem 0 3rem;
     width: stretch;
     max-width: 100%;
     overflow: hidden;
@@ -356,7 +365,7 @@
 .code-block code {
     display: block;
     width: max-content;
-    font-family: 'JetBrains Mono', monospace !important;
+    font-family: monospace !important;
     font-size: 1.3rem;
     color: #ffffff;
 }
@@ -366,8 +375,9 @@
 .code-block .key { color: #eaf1f2; }
 .code-block .string { color: var(--primary-color); }
 .code-block .number { color: #7ce0ff; }
-.code-block .boolean { color: #ffc258; font-weight: bold; }
+.code-block .boolean { color: #ffeb51; }
 .code-block .null { color: #c5c5c5; font-style: italic; text-transform: uppercase; }
+.code-block .placeholder { color: #ffa46f; font-style: italic; }
 
 
 /* #endregion */
