--- a/styles/defaults.css
+++ b/styles/defaults.css
@@ -20,7 +20,7 @@
 
 * {
     box-sizing: border-box;
-    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: all 0.3s ease;
     font-family: 'Jersey 10', sans-serif;
 }
 
